adjust KASSERT() triggered in PR port-cobalt/53054 to provide more info